--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
 
         <!-- CTA Buttons -->
         <div class="flex flex-col sm:flex-row gap-6 justify-center mb-16">
-          <a href="mailto:roberto.ayra@dominio.com" class="group relative px-8 py-4 bg-white text-gray-900 rounded-full font-semibold transition-all duration-300 hover:scale-105 hover:shadow-2xl flex items-center justify-center space-x-3">
+          <a href="mailto:ayra.zevallos@gmail.com" class="group relative px-8 py-4 bg-white text-gray-900 rounded-full font-semibold transition-all duration-300 hover:scale-105 hover:shadow-2xl flex items-center justify-center space-x-3">
             <span class="text-2xl">📧</span>
             <span class="relative z-10">Enviar Email</span>
             <div class="absolute inset-0 bg-gradient-to-r from-blue-500 to-cyan-500 rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
@@ -1110,7 +1110,7 @@
               transformando datos en decisiones estratégicas que impulsan el crecimiento empresarial.
             </p>
             <div class="flex space-x-4">
-              <a href="mailto:roberto.ayra@dominio.com" class="w-10 h-10 bg-gradient-to-r from-blue-500 to-cyan-500 rounded-full flex items-center justify-center hover:scale-110 transition-transform">
+              <a href="mailto:ayra.zevallos@gmail.com" class="w-10 h-10 bg-gradient-to-r from-blue-500 to-cyan-500 rounded-full flex items-center justify-center hover:scale-110 transition-transform">
                 <span class="text-white">📧</span>
               </a>
               <a href="https://linkedin.com/in/robertoayra" target="_blank" class="w-10 h-10 bg-gradient-to-r from-blue-600 to-indigo-600 rounded-full flex items-center justify-center hover:scale-110 transition-transform">
