--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
               <a href="https://linkedin.com/in/robertoayra" target="_blank" class="w-10 h-10 bg-gradient-to-r from-blue-600 to-indigo-600 rounded-full flex items-center justify-center hover:scale-110 transition-transform">
                 <span class="text-white">💼</span>
               </a>
-              <a href="https://github.com/robertoayra" target="_blank" class="w-10 h-10 bg-gradient-to-r from-gray-700 to-gray-900 rounded-full flex items-center justify-center hover:scale-110 transition-transform">
+              <a href="https://github.com/rcayraz" target="_blank" class="w-10 h-10 bg-gradient-to-r from-gray-700 to-gray-900 rounded-full flex items-center justify-center hover:scale-110 transition-transform">
                 <span class="text-white">⚡</span>
               </a>
             </div>
