--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portafolio - Roberto Ayra</title>
+  <title>Roberto Ayra - Portafolio</title>
+  <meta name="description" content="Portafolio profesional de Roberto Ayra. Ingeniero de datos especializado en AWS, Snowflake y arquitectura de software.">
+  <meta name="keywords" content="Roberto Ayra, portafolio, ingeniero de datos, AWS, Snowflake, arquitectura software">
+  <meta name="author" content="Roberto Ayra">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+    
+    <meta property="og:title" content="Roberto Ayra - Portafolio">
+    <meta property="og:description" content="Portafolio profesional de Roberto Ayra, especialista en datos y cloud.">
+    <meta property="og:url" content="https://github.com/rcayraz/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://tuusuario.github.io/imagen-preview.png">
+
+  
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Swiper CSS -->
